welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	def faireV(c:Color.Yellow) { 
		avance();
		baisseBrosse();
		leveBrosse();
		avance()
	}
}
